  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Add new Infobox “Home altitude difference” (Home AltD)
* Android
  - fix crash on startup when loading icons on ldpi screens
  - update 'white list' of USB devices with one more VID/PID pair for SoftRF Academy
* Windows
  - Popupmessages are now shown with full text again

Version 7.43 - 2024-08-12
* calculations
  - CRITICAL: reachable map labels show correct altitude with head wind #1424
  - CRITICAL: fix reachability calculation with older compilers (OpenVario,..)
* airspace
  - add classes according the OpenAir extended format AY tag
  - coloring is done according to the AC tag, or if present and allowed, according to the AY tag
* data files
  - new topology available from mapgen (including airport runways and rivers)
  - fix loss of "home" waypoint designation in certain situations for a
    non-airport home waypoint
  - reworked sgs-233 polar
* documentation
  - clarify task speed calculation section
  - lua reference updated
* ui
  - Airspace filter list can filter by type
  - TC 30s Infobox shows now climb rate since start of thermal
  - TL Gain Infobox shows now the overall climb rate of last thermal
  - add new Infobox V Task Est (Speed task estimated)
  - Status-Task panel: "Estimated task time", "Remaining time", and "Speed
    estimated" now blank if MC>0 & can't finish task
  - Status-Task panel: "Remaining time", "Remaining distance", "Speed
    estimated", and "Speed remaining" now blank after task is finished
  - add missing airspace to Select Airspace filter
  - NumberEntry dialog value can now be accepted by enter
  - Vario center gross label
  - Vario use AutoFonts for lables and values
  - Replace eventOrientation by two new events: eventOrientationCruise and eventOrientationCircling
  - New artificial horizon
  - Flarm gauge fix radar size
  - infobox management page rename buttons for copying sets
  - consistent naming of ok/close buttons and placement